WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34823
Crash in WebKit!WebCore::RenderTextControlSingleLine::createInnerTextStyle doing anything in Safari after sitting on a page with 3D site
https://bugs.webkit.org/show_bug.cgi?id=34823
Summary
Crash in WebKit!WebCore::RenderTextControlSingleLine::createInnerTextStyle do...
Enrica Casucci
Reported
2010-02-10 17:48:59 PST
1. go to
http://3dsafarisites.com/
2.Click CoverFlow in 3D or MillionDollarCu linkes 3. leave browser for 5+ minutes 4. Come back and click Back button or open bookmark in New tab
Attachments
Patch
(2.53 KB, patch)
2010-02-10 17:51 PST
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch
(1.44 KB, patch)
2010-02-10 18:03 PST
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-02-10 17:51:07 PST
Created
attachment 48535
[details]
Patch
Enrica Casucci
Comment 2
2010-02-10 18:03:51 PST
Created
attachment 48537
[details]
Patch Correct patch without the unwanted regression :-)
Simon Fraser (smfr)
Comment 3
2010-02-10 18:15:14 PST
Your changelog should mention that this is exercised by existing layout tests.
Enrica Casucci
Comment 4
2010-02-10 19:59:35 PST
Committed revision 54641.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug