Crash in WebKit!WebCore::RenderTextControlSingleLine::createInnerTextStyle doing anything in Safari after sitting on a page with 3D site <rdar://problem/7557201> https://bugs.webkit.org/show_bug.cgi?id=34823

Reviewed by Simon Fraser.

No tests added because the code is exercised by the existing tests.

The root cause was the fact that we were not releasing a reference that was held by CA.
In debug builds we had an assert in the destructor of WKCACFLayer.

* platform/graphics/win/GraphicsLayerCACF.cpp:
(WebCore::GraphicsLayerCACF::~GraphicsLayerCACF):



Canonical link: https://commits.webkit.org/45951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54641 268f45cc-cd09-0410-ab3c-d52691b4dbfc